# kac-model-simulator

./: CMakeLists.txt  RenderArea.cpp  experiment  experiment.cpp  main.cpp  plotter.py  run_experiment.sh  simple_simulator.cpp  simulator.cpp  simulator.hpp
old-ui/: RenderArea.hpp  main.cpp  simulator.cpp
simple-simulator/: build-simple-sim.sh  simple_simulator
